sumo/tests/duarouter/trips/errors/vehicle_false_arrivalpos/options.duarouter
--net-file=input_net.net.xml --trip-defs=input_trips.trips.xml -o routes.rou.xml
